<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.0</version>
    </parent>

    <!-- Maven Coordinates -->
    <groupId>io.complyt</groupId>
    <artifactId>complyt</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <!-- Maven Coordinates -->

    <packaging>pom</packaging>
    <modules>
        <module>sales-tax</module>
        <module>test-service</module>
        <module>config-server</module>
    </modules>

    <name>Complyt</name>
    <description>This is a product made by Complyt</description>

    <properties>
        <java.version>17</java.version>

        <!-- Dependencies -->
        <mapstruct.version>1.5.1.Final</mapstruct.version>
        <lombok.version>1.18.24</lombok.version>
        <java-tuples.version>1.2</java-tuples.version>
        <springdoc-openapi-webflux-ui.version>1.6.9</springdoc-openapi-webflux-ui.version>
        <reactor-test.version>3.4.18</reactor-test.version>
        <spring-security-test.version>5.6.3</spring-security-test.version>
        <mockito-junit-jupiter.version>4.6.1</mockito-junit-jupiter.version>
        <!-- Dependencies -->

        <!-- Plugins -->
        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
        <!-- Plugins -->
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Test Dependencies -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <version>2.7.1</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>io.projectreactor</groupId>
                <artifactId>reactor-test</artifactId>
                <scope>test</scope>
                <version>${reactor-test.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-test</artifactId>
                <scope>test</scope>
                <version>${spring-security-test.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <scope>test</scope>
                <version>${mockito-junit-jupiter.version}</version>
            </dependency>
            <!-- Test Dependencies -->

            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.javatuples</groupId>
                <artifactId>javatuples</artifactId>
                <version>${java-tuples.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-webflux-ui</artifactId>
                <version>${springdoc-openapi-webflux-ui.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>enforce-env-requirements</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>[17,)</version>
                                </requireJavaVersion>
                                <requireMavenVersion>
                                    <version>[3.8.5,)</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.3.0</version>
                <configuration>
                    <flattenMode>bom</flattenMode>
                </configuration>
                <executions>
                    <!-- enable flattening -->
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <!-- ensure proper cleanup -->
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>${maven-release-plugin.version}</version>
                <configuration>
                    <releaseProfiles>release</releaseProfiles>
                    <checkModificationExcludes>true</checkModificationExcludes>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <scmCommentPrefix>[maven-release-plugin] [skip ci]</scmCommentPrefix>
                    <pushChanges>true</pushChanges>
                    <autoVersionSubmodules>false</autoVersionSubmodules>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <scm>
        <connection>scm:git:git@github.com:Complyt/complyt.git</connection>
        <developerConnection>scm:git:git@github.com:Complyt/complyt.git</developerConnection>
        <url>git@github.com:idhub-io/idhub-api.git</url>
        <tag>HEAD</tag>
    </scm>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>Github</name>
            <url>https://maven.pkg.github.com/Complyt/complyt</url>
        </repository>
    </distributionManagement>
</project>